# xiaomi-mjbqdyj1-wc-reveng

./: .gitignore  .tool-versions  CLAUDE.md  FINDINGS.md  README.md  client.py  requirements.txt  test_protocol.py
.github/workflows/: pages.yml
protocol-core/: Cargo.toml
protocol-core/pkg/: mjbqdyj1_protocol.d.ts  mjbqdyj1_protocol.js  mjbqdyj1_protocol_bg.wasm  mjbqdyj1_protocol_bg.wasm.d.ts  package.json
protocol-core/src/: lib.rs  python.rs  wasm.rs
scripts/: build-pages.mjs
static/: app.js  index.html  printer-web-bluetooth.js  styles.css
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: aes.ts  browser-ble.ts  browser.ts  core.ts  image.ts  index.ts  node-ble.ts  node-cli.ts  node-image.ts
ts/test/: core.test.ts
