[package]
name = "mjbqdyj1-protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "mjbqdyj1_protocol"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python", "wasm"]
python = ["dep:pyo3"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[profile.release]
opt-level = 3
lto = true
